--- a/docker/app/.env.dev
+++ b/docker/app/.env.dev
@@ -1,3 +1,7 @@
-CLIENT_ENV_LIST=NODE_ENV
+CLIENT_ENV_LIST=FIREBASE__API_KEY,FIREBASE__AUTH_DOMAIN,FIREBASE__DATABASE_URL,FIREBASE__STORAGE_BUCKET,NODE_ENV
 DEPLOY_ENV=development
+FIREBASE__API_KEY=
+FIREBASE__AUTH_DOMAIN=
+FIREBASE__DATABASE_URL=
+FIREBASE__STORAGE_BUCKET=
 HOST=app
