--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "version": "0.0.0",
-  "name": "mobx-starter",
-  "description": "Nothing fancy just a suite of packages that fit my personal taste.",
+  "name": "junday",
+  "description": "A guest registration platform for your unforgettable wedding.",
   "author": "Lee Siong Chan <ahlee2326@me.com>",
   "license": "MIT",
   "scripts": {
@@ -11,17 +11,28 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "classnames": "^2.2.5",
+    "firebase": "^3.5.1",
     "koa": "^1.0.0",
     "koa-helmet": "^1.0.0",
     "koa-logger": "^1.0.0",
     "koa-static-cache": "^3.0.0",
     "koa-views": "^4.0.0",
-    "lodash": "^4.16.2",
+    "lodash": "^4.16.4",
+    "material-ui": "^0.16.1",
     "mobx": "^2.6.0",
     "mobx-react": "^3.5.6",
+    "mobx-react-form": "^1.13.6",
+    "qrcode.react": "^0.6.1",
     "react": "^15.3.2",
+    "react-breadcrumbs": "^1.4.1",
     "react-dom": "^15.3.2",
-    "react-router": "3.0.0-beta.1"
+    "react-router": "3.0.0-beta.1",
+    "react-tap-event-plugin": "^1.0.0",
+    "shortid": "^2.2.6",
+    "unflatten": "^1.0.4",
+    "validator": "^6.1.0",
+    "validatorjs": "^3.8.0"
   },
   "devDependencies": {
     "@kadira/storybook": "^2.20.1",
@@ -48,7 +59,6 @@
     "koa-webpack-hot-middleware": "^1.0.3",
     "lost": "^7.1.0",
     "mobx-react-devtools": "^4.2.6",
-    "normalize.css": "^5.0.0",
     "nunjucks": "^2.5.2",
     "postcss-hexrgba": "^0.2.1",
     "postcss-import": "8.1.0",
@@ -56,6 +66,7 @@
     "postcss-nested": "^1.0.0",
     "postcss-simple-vars": "^3.0.0",
     "react-hot-loader": "^3.0.0-beta.5",
+    "sanitize.css": "^4.1.0",
     "style-loader": "^0.13.1",
     "webpack": "2.1.0-beta.21"
   }
