--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-dom": "^15.3.2",
     "react-router": "3.0.0-beta.1",
     "react-tap-event-plugin": "^1.0.0",
+    "shallowequal": "^0.2.2",
     "shortid": "^2.2.6",
     "unflatten": "^1.0.4",
     "validator": "^6.1.0",
