--- a/docker/app/Dockerfile
+++ b/docker/app/Dockerfile
@@ -21,9 +21,11 @@ COPY server.babel.js ./
 COPY src src/
 COPY templates templates/
 COPY webpack.config.babel.js ./
+RUN yarn run build
 
 COPY docker/app/start.sh /
 COPY docker/app/update-env-vars.sh /
+
 
 EXPOSE 3000
 CMD ["/start.sh"]
