Update dependencies; Update dockerfile

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,3 +8,8 @@ services:
     env_file: ./docker/app/.env
     environment:
       - TERM=xterm-256color
+    volumes:
+      - yarn-cache:/root/.yarn-cache
+
+volumes:
+  yarn-cache: {}
