--- a/package.json
+++ b/package.json
@@ -22,12 +22,12 @@
     "material-ui": "^0.16.1",
     "mobx": "^2.6.0",
     "mobx-react": "^3.5.6",
-    "mobx-react-form": "^1.13.6",
+    "mobx-react-form": "^1.13.9",
     "qrcode.react": "^0.6.1",
     "react": "^15.3.2",
     "react-breadcrumbs": "^1.4.1",
     "react-dom": "^15.3.2",
-    "react-router": "3.0.0-beta.1",
+    "react-router": "^3.0.0",
     "react-tap-event-plugin": "^1.0.0",
     "shallowequal": "^0.2.2",
     "shortid": "^2.2.6",
