Add login page; Bug fixes; Upgrade packages

--- a/docker/app/.env.dev
+++ b/docker/app/.env.dev
@@ -1,7 +1,8 @@
-CLIENT_ENV_LIST=FIREBASE__API_KEY,FIREBASE__AUTH_DOMAIN,FIREBASE__DATABASE_URL,FIREBASE__STORAGE_BUCKET,NODE_ENV
+CLIENT_ENV_LIST=FIREBASE__API_KEY,FIREBASE__AUTH_DOMAIN,FIREBASE__DATABASE_URL,FIREBASE__STORAGE_BUCKET,FIREBASE__MESSAGING_SENDER_ID,NODE_ENV
 DEPLOY_ENV=development
 FIREBASE__API_KEY=
 FIREBASE__AUTH_DOMAIN=
 FIREBASE__DATABASE_URL=
 FIREBASE__STORAGE_BUCKET=
+FIREBASE__MESSAGING_SENDER_ID=
 HOST=app
