--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-qr-reader": "^0.2.9",
     "react-router": "^3.0.0",
     "react-tap-event-plugin": "^1.0.0",
+    "react-tooltip": "^3.2.1",
     "shallowequal": "^0.2.2",
     "shortid": "^2.2.6",
     "unflatten": "^1.0.4",
