--- a/.editorconfig
+++ b/.editorconfig
@@ -46,6 +46,14 @@ indent_style = space
 indent_size = 4
 trim_trailing_whitespace = false
 
+[.babelrc]
+indent_style = space
+indent_size = 2
+
+[.eslintrc]
+indent_style = space
+indent_size = 2
+
 [docker-compose.{yml,override.yml}]
 indent_style = space
 indent_size = 2
