--- a/docker/app/.env.prod
+++ b/docker/app/.env.prod
@@ -1,8 +1,9 @@
-CLIENT_ENV_LIST=FIREBASE__API_KEY,FIREBASE__AUTH_DOMAIN,FIREBASE__DATABASE_URL,FIREBASE__STORAGE_BUCKET,FIREBASE__MESSAGING_SENDER_ID,NODE_ENV
+CLIENT_ENV_LIST=FIREBASE__API_KEY,FIREBASE__AUTH_DOMAIN,FIREBASE__DATABASE_URL,FIREBASE__STORAGE_BUCKET,FIREBASE__MESSAGING_SENDER_ID,NODE_ENV,SEGMENT_ANALYTICS_WRITE_KEY
 DEPLOY_ENV=production
 FIREBASE__API_KEY=
 FIREBASE__AUTH_DOMAIN=
 FIREBASE__DATABASE_URL=
-FIREBASE__STORAGE_BUCKET=
 FIREBASE__MESSAGING_SENDER_ID=
+FIREBASE__STORAGE_BUCKET=
 HOST=app
+SEGMENT_ANALYTICS_WRITE_KEY=
