--- a/package.json
+++ b/package.json
@@ -28,8 +28,9 @@
     "react": "^15.3.2",
     "react-breadcrumbs": "^1.4.1",
     "react-dom": "^15.3.2",
-    "react-qr-reader": "^0.2.9",
+    "react-qr-reader": "^0.3.1",
     "react-router": "^3.0.0",
+    "react-select": "^1.0.0-rc.2",
     "react-tap-event-plugin": "^2.0.1",
     "react-tooltip": "^3.2.1",
     "shallowequal": "^0.2.2",
