--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "classnames": "^2.2.5",
     "firebase": "^3.5.1",
+    "html2canvas": "^1.0.0-alpha.12",
     "koa": "^1.0.0",
     "koa-helmet": "^1.0.0",
     "koa-logger": "^1.0.0",
